src/objects/FDPCrossWalk__c.object
<CustomObject>
    <description>This stores the information for Crosswalk(Program update).</description>
    <fields>
        <fullName>CrosswalkDate__c</fullName>
        <description>If old course version not finished by this date, it will be changed to new course or course version</description>
        <label>Crosswalk Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IsTestData__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to indicate if the record is a test record</description>
        <label>Is Test Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NEW_Id__c</fullName>
        <description>A temporary holding field for the new SF ID of this record (person account conversion).</description>
        <label>NEW_Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>NewPAMSID__c</fullName>
        <description>id from pams for new course version.</description>
        <label>NewPAMSID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NewWGUCourseVersion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>new WGU Course Version</description>
        <label>New WGU Course Version</label>
        <referenceTo>WGUCourseVersion__c</referenceTo>
        <relationshipLabel>FDPCrossWalks (New WGU Course Version)</relationshipLabel>
        <relationshipName>FDPCrossWalks1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OLD_Id__c</fullName>
        <description>A temporary holding field for the SF ID of this record, to be used for data migration from a person account org to a non-person account org. Declared as External Id for Upsert operations via the SOAP, REST, or BULK APIs.</description>
        <externalId>true</externalId>
        <label>OLD_Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OldWGUCourseVersion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>old wgu course version</description>
        <label>OldWGU Course Version</label>
        <referenceTo>WGUCourseVersion__c</referenceTo>
        <relationshipLabel>FDPCrossWalks</relationshipLabel>
        <relationshipName>FDPCrossWalks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>StudentCourseVersion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The student course version link</description>
        <label>Student Course Version</label>
        <referenceTo>StudentCourseVersion__c</referenceTo>
        <relationshipLabel>FDPCrossWalks</relationshipLabel>
        <relationshipName>FDPCrossWalks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Student__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>student link</description>
        <label>Student</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>FDPCrossWalks</relationshipLabel>
        <relationshipName>FDPCrossWalks</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>oldpamsID__c</fullName>
        <description>pamsid for old course version</description>
        <label>oldpamsID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pidm__c</fullName>
        <description>Student pidm</description>
        <label>Student pidm</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>FDP CrossWalk</label>
    <nameField>
        <label>studentpidm</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FDPCrossWalks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>